# nz-phishing-selective-detection

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: distilbert.yaml  tfidf_lr.yaml  tfidf_lr_no_nz.yaml
docs/baselines/: v0.1.0.md  v0.2.0.md
scripts/: collect_uci_sms.py  paraphrase_nz_lures.py  synth_nz_lures.py
src/nzphish/: __init__.py  train.py
src/nzphish/data/: __init__.py  paraphrase.py  prepare.py  schema.py
src/nzphish/deferral/: __init__.py
src/nzphish/eval/: __init__.py  metrics.py  run.py
src/nzphish/features/: __init__.py  nz_localized.py
src/nzphish/models/: __init__.py  distilbert.py  tfidf_lr.py
src/nzphish/utils/: __init__.py
tests/: test_distilbert.py  test_nz_features.py  test_paraphrase_cache.py  test_tfidf_lr.py
