[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nzphish"
version = "0.1.0"
description = "NZ-localized phishing and smishing detection with class-conditional selective abstention"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Muhammad Shahnawaz Khan", email = "shahnawaz.jrw@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.18",
    "accelerate>=0.29",
    "pyyaml>=6.0",
    "click>=8.1",
    "tqdm>=4.66",
    "regex>=2024.4",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "requests>=2.31",
    "tldextract>=5.1",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
    "google-genai>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff==0.15.18",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pre-commit>=3.7",
]

[project.scripts]
nzphish-prepare = "nzphish.data.prepare:main"
nzphish-train = "nzphish.train:main"
nzphish-eval-stratified = "nzphish.eval.run:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nzphish*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nzphish"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
